@@ -2919,6 +2919,9 @@ can be implemented as lambdas rather than primitives.
 .Cr "$&primitives"
 Returns a list of the names of xs primitives.
 .TP
+.Cr "$&random"
+Returns a random integer.
+.TP
 .Cr "$&version"
 Returns the version string of
 .IR xs .
