@@ -60,6 +60,8 @@ Removed &$promptignore and &$nopromptignore. Xs automatically marks
 zero-width character sequences in $prompt in order for readline() to
 keep track of cursor position.
 
+Added $&random. This returns a random integer.
+
 xs now has its own SIGWINCH handler since readline, as of version
 6.3, no longer handles the signal. For background, please read:
 https://bugs.python.org/issue23735 
